--- a/announcements/oem.html
+++ b/announcements/oem.html
@@ -5,6 +5,7 @@
 <H2>Welcome to IoTKeys</H2>
 Coming soon ... a new world of integration.
 <br/>
+<img src="AnyCarrier.png">  
 Integrate your multiple eCommerce site orders with carriers like Australia Post while also maintaining your stock listings and inventory levels.
 </body>
 </html>
