--- a/config/devices/SF-884/help/help-0.1.html
+++ b/config/devices/SF-884/help/help-0.1.html
@@ -4,8 +4,23 @@
 <body>
 <h3>SF-884 is an scales indicator</h3>
 <br>
+  If you are using this device without any other configuration options then the weight readings are available by pressing and holding the <b>Ctrl</b> and <b>Alt</b> keys then tapping the <b>w</b> key.
+  This will work regardless of the application.
 <h4>CONFIGURATION</h4>
-The configuration details are found in the file devices.json
+The configuration details are found in 2 files keyMaps.json and devices.json. If, for any reason, changes are made in these files then the contents should be validated here;<br/>
+  https://jsonlint.com/
+  <br/>
+  If the structure of the files is comprised then the application may not start correctly.
+  <h5>keyMaps.json</h5>
+  This sets what key combination will read the scales. There may be situations where a key combination could interfere with the active application. In these cases the key combination can be changed.
+  
+  <ul>
+    <li>alt - Whether the Alt key needs to be pressed (false/true)</li>
+    <li>ctrl - Whether the Ctrl key needs to be pressed (false/true)</li>
+    <li>keyCode - The keypress code to look for</li>
+  </ul>
+<br/>
+  <h5>devices.json</h5>
 Usually the only value that should be changed is the <b>portName</b>. If set to "?" then this will cause IoTKeys to scan the ports on startup. 
 This may not work in all cases. In situations where the scan detects the wrong USB device then the correct port needs to be entered into this file. If the device is moved to 
 another port then it will have to be reentered.
@@ -14,6 +29,15 @@ On Windows 8/10 right click the start button
 <br/>
 <img src="load device manager.png">
 <br/>
-
+The following screen will be loaded
+<br/>
+<img src="device manager.png">
+<br/>
+The COM port is indicated in the (). So in this case it is "COM4"  
+  
+  <h4>Troubleshooting</h4>
+  If the SF-884 device is shown in the Ports with a warning that will usually indicate that a device driver needs to be installed. You will need to obtain administrative privileges from your network or IT administrator in order to install these drivers.
+  The driver can be found here
+  https://github.com/CarbonMan/IoTKeys/raw/master/config/devices/CH341SER.EXE
 </body>
 </html>
