--- a/config/devices/SF-884/help/help-0.1.html
+++ b/config/devices/SF-884/help/help-0.1.html
@@ -15,7 +15,7 @@ The configuration details are found in 2 files<br/>
   These are described below. If, for any reason, changes are made in these files then the contents should be validated here;<br/>
   https://jsonlint.com/
   <br/>
-  If the structure of the files is comprised then the application may not start correctly.<br/>
+  If the structure of the files is invalid then the application may not start correctly.<br/>
   <h4>keyMaps.json</h4>
   This sets what key combination will read the scales. There may be situations where a key combination could interfere with the active application. In these cases the key combination can be changed.
   
@@ -26,21 +26,23 @@ The configuration details are found in 2 files<br/>
       https://raw.githubusercontent.com/CarbonMan/IoTKeys/master/config/KeyCodes.txt</li>
   </ul>
 <br/>
-<br/>
   <h4>devices.json</h4>
 Usually the only value that should be changed is the <b>portName</b>. If set to "?" then this will cause IoTKeys to scan the ports on startup. 
 This may not work in all cases. In situations where the scan detects the wrong USB device then the correct port needs to be entered into this file. If the device is moved to 
 another port then it will have to be reentered.
 To set the COM port first you have to determine the port number.
 On Windows 8/10 right click the start button
-<br/>
+<br/><br/>
 <img src="load device manager.png">
-<br/>
+<br/><br/>
 The following screen will be loaded
-<br/>
+<br/><br/>
 <img src="device manager.png">
-<br/>
-The COM port is indicated in the (). So in this case it is "COM4"  
+<br/><br/>
+The COM port is indicated in the (). So in this case it is "COM4". The portName line in the devices.json file would be: 
+  ...
+  "portName" : "COM4",
+  ...
   
   <h4>Troubleshooting</h4>
   If the SF-884 device is shown in the Ports with a warning that will usually indicate that a device driver needs to be installed. You will need to obtain administrative privileges from your network or IT administrator in order to install these drivers.
