--- a/config/devices/SF-884/help/help-0.1.html
+++ b/config/devices/SF-884/help/help-0.1.html
@@ -45,7 +45,7 @@ The COM port is indicated in the (). So in this case it is "COM4". The portName 
   ...
   
   <h4>Troubleshooting</h4>
-  If the SF-884 device is shown in the Ports with a warning that will usually indicate that a device driver needs to be installed. You will need to obtain administrative privileges from your network or IT administrator in order to install these drivers.
+  If the SF-884 device is shown in the Ports with a warning, that will usually indicate that a device driver needs to be installed. You will need to obtain administrative privileges from your network or IT administrator in order to install these drivers.
   The driver can be found here
   https://github.com/CarbonMan/IoTKeys/raw/master/config/devices/CH341SER.EXE
 </body>
