--- a/config/devices/SF-884/help/help-0.1.html
+++ b/config/devices/SF-884/help/help-0.1.html
@@ -5,7 +5,7 @@
 <h3>SF-884 is a weigh scales indicator</h3>
 <br>
   If you are using this device without any other configuration options then the weight readings are available by pressing and holding the <b>Ctrl</b> and <b>Alt</b> keys then tapping the <b>w</b> key.
-  This will work regardless of the application.
+  This will work regardless of the application. One important quirk of this scale is that does not constantly put out values, it only sends out a new value when the value changes. So make sure the scale has nothing on it when the application starts.
 <h4>CONFIGURATION</h4>
 The configuration details are found in 2 files<br/>
   <ol>
