--- a/config/devices/SF-884/help/help-0.1.html
+++ b/config/devices/SF-884/help/help-0.1.html
@@ -6,6 +6,8 @@
 <br>
   If you are using this device without any other configuration options then the weight readings are available by pressing and holding the <b>Ctrl</b> and <b>Alt</b> keys then tapping the <b>w</b> key.
   This will work regardless of the application. One important quirk of this scale is that does not constantly put out values, it only sends out a new value when the value changes. So make sure the scale has nothing on it when the application starts.
+  <br/>
+  The scales can be used for automatic operations when combined with a freight carrier plugin such as the Australia Post or DHL plugins. In these cases, the weight will be automatically inserted into the webpage, no additional key combinations are required.
 <h4>CONFIGURATION</h4>
 The configuration details are found in 2 files<br/>
   <ol>
