--- a/scripts/Australia Post/help/help-0.1.html
+++ b/scripts/Australia Post/help/help-0.1.html
@@ -3,7 +3,8 @@
 </head>
 <body style="font-family:arial">
 <h3>A plugin to making Australia Post shipments</h3>
-This plugin can connect with eBay and wooCommerce orders, weighing and cubing devices and an inventory system.
+This plugin can connect with order plugins, weighing and cubing devices and an inventory system.
 <br/>
+  <img src="Booking plugin.png">
 </body>
 </html>
