--- a/scripts/wooCommerce/help/help-0.1.html
+++ b/scripts/wooCommerce/help/help-0.1.html
@@ -2,12 +2,12 @@
 <head>
 </head>
 <body style="font-family:arial">
-<h3>eBay plugin</h3>
+<h3>wooCommerce plugin</h3>
 This plugin reads from eBay orders to automatically fill in the receiver details in freight bookings. It will also pass the sku values through to any inventory plugin that might be loaded.
 <br/>
-Go into eBay and export the orders as <b>csv</b>. Save the file in the IoTKeys application directory as data/ebayOrders.csv
+Go into your wooCommerce interface and export the orders as <b>json</b>. Save the file in the IoTKeys application directory as data/wooCommerce.json
 <br/>
-So if you installed IoTkeys into c:\apps\IoTkeys then the file should be saved as c:\apps\IoTkeys\data\ebayOrders.csv
+So if you installed IoTkeys into c:\apps\IoTkeys then the file should be saved as c:\apps\IoTkeys\data\wooCommerce.json
 <br/>
 The plugin can only see the orders that have been exported. So the file needs to be up to date.
 </body>
