--- a/scripts/wooCommerce/help/help-0.1.html
+++ b/scripts/wooCommerce/help/help-0.1.html
@@ -3,7 +3,7 @@
 </head>
 <body style="font-family:arial">
 <h3>wooCommerce plugin</h3>
-This plugin reads from eBay orders to automatically fill in the receiver details in freight bookings. It will also pass the sku values through to any inventory plugin that might be loaded.
+This plugin reads from wooCommerce orders to automatically fill in the receiver details in freight bookings. It will also pass the sku values through to any inventory plugin that might be loaded.
 <br/>
 Go into your wooCommerce interface and export the orders as <b>json</b>. Save the file in the IoTKeys application directory as data/wooCommerce.json
 <br/>
