--- a/scripts/wooCommerce/help/help-0.1.html
+++ b/scripts/wooCommerce/help/help-0.1.html
@@ -5,10 +5,11 @@
 <h3>wooCommerce plugin</h3>
 This plugin reads from wooCommerce orders to automatically fill in the receiver details in freight bookings. It will also pass the sku values through to any inventory plugin that might be loaded.
 <br/>
-Go into your wooCommerce interface and export the orders as <b>json</b>. Save the file in the IoTKeys application directory as data/wooCommerce.json
+Go into your wooCommerce interface and export the orders as <b>json</b>. Save the file in the IoTKeys application directory in data/wooCommerce. You can have multiple ebay sites, so there can be multiple files in the data/wooCommerce directory.
 <br/>
-So if you installed IoTkeys into c:\apps\IoTkeys then the file should be saved as c:\apps\IoTkeys\data\wooCommerce.json
+So if you installed IoTkeys into c:\apps\IoTkeys then the file should be saved in c:\apps\IoTkeys\data\wooCommerce
 <br/>
-The plugin can only see the orders that have been exported. So the file needs to be up to date.
+The plugin can only see the orders that have been exported. So the file needs to be up to date. When all the orders have been processed then the file can be removed.
+Storing too many order files will slow down the processing with no real benefit.
 </body>
 </html>
