--- a/scripts/ebay/ebayOrder/help/help-0.1.html
+++ b/scripts/ebay/ebayOrder/help/help-0.1.html
@@ -5,10 +5,11 @@
 <h3>eBay plugin</h3>
 This plugin reads from eBay orders to automatically fill in the receiver details in freight bookings. It will also pass the sku values through to any inventory plugin that might be loaded.
 <br/>
-Go into eBay and export the orders as <b>csv</b>. Save the file in the IoTKeys application directory as data/ebayOrders.csv
+Go into eBay and export the orders as <b>csv</b>. Save the file in the IoTKeys application directory data/ebay. You can have multiple ebay sites, so there can be multiple files in the data/ebay directory.
 <br/>
-So if you installed IoTkeys into c:\apps\IoTkeys then the file should be saved as c:\apps\IoTkeys\data\ebayOrders.csv
+So if you installed IoTkeys into c:\apps\IoTkeys then the file should be saved in c:\apps\IoTkeys\data\ebay
 <br/>
-The plugin can only see the orders that have been exported. So the file needs to be up to date.
+The plugin can only see the orders that have been exported. So the files need to be up to date. When all the orders have been processed then the file can be removed.
+Storing too many order files will slow down the processing with no real benefit.
 </body>
 </html>
