--- a/scripts/csvInventory/help/help-0.1.html
+++ b/scripts/csvInventory/help/help-0.1.html
@@ -20,5 +20,9 @@ The processing is by the sku number. So for example, when an ebay order is shipp
 <li>If the files don't exist they will be automatically created</li>
 </ul>
 <br/>
+  When you edit the files it is really important that you <i>preserve</i> the csv format. Within Excel when you save you will see the following message.<br/>
+  <img src="csvExcel.png">
+  <br/>
+  Select <b>yes</b> otherwise the application may not be able to properly read the file.
 </body>
 </html>
