--- a/documentation/user/loadPlugin-0.1.html
+++ b/documentation/user/loadPlugin-0.1.html
@@ -2,9 +2,10 @@
 <head>
 </head>
 <body>
-Select the plugin(s) to load. If you have purchased a device (for example a set of scales) select <b>device</b> from the categories and then find the device in the list. 
+  <h3>Welcome</h3>
+Select the plugin(s) to load. If you have purchased a device (for example a set of scales) select <b>Device</b> from the <b>Plugin type</b> and then find the device in the list. 
 Check it and any other plugins that you need, then click the <i>Install plugins</i> button.
-<br/>
+<br/><br/>
 All checked items will be installed when the button is clicked, and the application will be restarted.
 </body>
 </html>
