--- a/documentation/user/loadPlugin-0.1.html
+++ b/documentation/user/loadPlugin-0.1.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 </head>
-<body>
+<body style="font-family:arial">
   <h3>Welcome</h3>
 Select the plugin(s) to load. If you have purchased a device (for example a set of scales) select <b>Device</b> from the <b>Plugin type</b> and then find the device in the list. 
 Check it and any other plugins that you need, then click the <i>Install plugins</i> button.
