--- a/config/devices/Midas/help/help-0.1.html
+++ b/config/devices/Midas/help/help-0.1.html
@@ -3,5 +3,6 @@
 </head>
 <body style="font-family:arial">
 <h3>Medium size (<60kgs) photography turntable</h3>
+  <img src="hammerlock.gif" />
 </body>
 </html>
