--- a/config/devices/Midas/help/help-0.1.html
+++ b/config/devices/Midas/help/help-0.1.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body style="font-family:arial">
-<h3>Medium size (<60kgs) photography turntable</h3>
+<h3>Medium size (up to 80kgs) photography turntable</h3>
   <img src="hammerlock.gif" />
 </body>
 </html>
