--- a/wwwpub/TurnTable/index.html
+++ b/wwwpub/TurnTable/index.html
@@ -6,12 +6,12 @@
         <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' data:; media-src *; img-src 'self' data: content:;">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-		<link rel="stylesheet" href="css/jquery-ui.css">
+		<link rel="stylesheet" href="../css/jquery-ui.css">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui-2.2.6/semantic.min.css">
-        <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
-        <script type="text/javascript" src="js/semantic-2.1.8.min.js"></script>
-		<script src="js/jquery-ui.js"></script>
+        <link rel="stylesheet" type="text/css" href="../css/semantic-ui/semantic.min.css">
+        <script type="text/javascript" src="../js/jquery.min.js"></script>
+        <script type="text/javascript" src="../js/semantic.min.js"></script>
+		<script src="../js/jquery-ui.min.js"></script>
         <title>Turn IT</title>
 		  <style>
 		  #progressbar {
@@ -127,6 +127,6 @@
         <!-- <script type="text/javascript" src="cordova.js"></script> -->
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/turnTableController.js"></script>
-        <script type="text/javascript" src="js/progressBar.js"></script>
+        <script type="text/javascript" src="../js/progressBar.js"></script>
     </body>
 </html>
