--- a/config/devices/Cubist/help/help-0.1.html
+++ b/config/devices/Cubist/help/help-0.1.html
@@ -3,5 +3,14 @@
 </head>
 <body style="font-family:arial">
 <h3>Cubist is a cubing device</h3>
+  Instantly detect the cubic dimensions of a parcel. Works with other plugins to automatically insert L x W x H into web pages.
+  <br/>
+  Cubist uses a sensor to detect cubic dimensions. 
+<h4>Installation</h4>
+  An additional step is required to get the Kinect sensor working and that is to download the Kinect v1.8 SDK available here;
+  <br/>
+  <b>https://www.dropbox.com/s/8z5chg39vm40f0a/KinectSDK-v1.8-Setup.exe?dl=0</b>
+  <br/>
+  This will install the Kinect Management Service. This service must be running in order for the Cubist plugin to work.
 </body>
 </html>
