--- a/config/devices/Arena/help/help-01.html
+++ b/config/devices/Arena/help/help-01.html
@@ -2,33 +2,18 @@
 <head>
 </head>
 <body style="font-family:arial">
-<h3>SF-884 is a weigh scales indicator</h3>
+<h3>Arena host</h3>
 <h4>Overview</h4>
 <br>
-  If you are using this device without any other configuration options then the weight readings are available by pressing and holding the <b>Ctrl</b> and <b>Alt</b> keys then tapping the <b>w</b> key.
-  This will work regardless of the application. One important quirk of this scale is that does not constantly put out values, it only sends out a new value when the value changes. So make sure the scale has nothing on it when the application starts.
-  <br/><br/>
-  The scales can be used for automatic operations when combined with a freight carrier plugin such as the Australia Post or DHL plugins. In these cases, the weight will be automatically inserted into the webpage, no additional key combinations are required.
 <h4>CONFIGURATION</h4>
-The configuration details are found in 2 files<br/>
+The configuration details are found in the file<br/>
   <ol>
-    <li>keyMaps.json</li>
     <li>devices.json</li>
   </ol>
-  These are described below. If, for any reason, changes are made in these files then the contents should be validated here;<br/>
+  This is described below. If, for any reason, changes are made in this file then the contents should be validated here;<br/>
   https://jsonlint.com/
   <br/>
-  If the structure of the files is invalid then the application may not start correctly.<br/>
-  <h4>keyMaps.json</h4>
-  This sets what key combination will read the scales. There may be situations where a key combination could interfere with the active application. In these cases the key combination can be changed.
-  
-  <ul>
-    <li>alt - Whether the Alt key needs to be pressed (false/true)</li>
-    <li>ctrl - Whether the Ctrl key needs to be pressed (false/true)</li>
-    <li>keyCode - The keypress code to look for. A full list of keycodes is available here<br/>
-      https://raw.githubusercontent.com/CarbonMan/IoTKeys/master/config/KeyCodes.txt</li>
-  </ul>
-<br/>
+  If the structure of the file is invalid then the application may not start correctly.<br/>
   <h4>devices.json</h4>
 Usually the only value that should be changed is the <b>portName</b>. If set to "?" then this will cause IoTKeys to scan the ports on startup. 
 This may not work in all cases. In situations where the scan detects the wrong USB device then the correct port needs to be entered into this file. If the device is moved to 
@@ -50,7 +35,7 @@ The COM port is indicated in the (). So in this case it is "COM4". The portName 
   <br/>
   ...
   <h4>Troubleshooting</h4>
-  If the SF-884 device is shown in the Ports with a warning, that will usually indicate that a device driver needs to be installed. You will need to obtain administrative privileges from your network or IT administrator in order to install these drivers.
+  If the Arena device is shown in the Ports with a warning, that will usually indicate that a device driver needs to be installed. You will need to obtain administrative privileges from your network or IT administrator in order to install these drivers.
   The driver can be found here
   https://github.com/CarbonMan/IoTKeys/raw/master/config/devices/CH341SER.EXE
 </body>
