Update and rename help-01.html to help-0.1.html

--- a/config/devices/Arena/help/help-0.1.html
+++ b/config/devices/Arena/help/help-0.1.html
@@ -4,6 +4,7 @@
 <body style="font-family:arial">
 <h3>Arena host</h3>
 <h4>Overview</h4>
+  An arena is the Access Point for a private network of devices.
 <br>
 <h4>CONFIGURATION</h4>
 The configuration details are found in the file<br/>
